# IBL_GUI_Deterministic_Reversal_Learning

./: .gitignore  pyproject.toml
GaborDRLTask/: Gabor2D_MN.bonsai  Gabor2D_MN.bonsai.layout
deterministic_reversal_learning/: online_plots.py  task.py  task_parameters.yaml
deterministic_reversal_learning/GaborDRLTask/: Gabor2D_MN.bonsai  Gabor2D_MN.bonsai.layout
deterministic_reversal_learning/GaborIBLTask/: Gabor2D_MN.bonsai
deterministic_reversal_learning/devices/camera_setup/: setup_video_MN.bonsai
devices/camera_recordings/: TrainingRig_SaveVideo_TrainingTasks_MN.bonsai
devices/camera_setup/: setup_video_MN.bonsai.layout
drl_tasks/: DRL.py  base_drl_params.yaml  deterministic_reversal_learning.py  online_plots.py  path_helper.py  video_pyspin.py
drl_tasks/_drl_tasks_DeterministicReversalLearning/: task.py  task_parameters.yaml
drl_tasks/_drl_tasks_HabituationDeterministicReversalLearning/: task.py  task_parameters.yaml
drl_tasks/_drl_tasks_TrainingDeterministicReversalLearning/: task.py  task_parameters.yaml
drl_tasks/deterministic_reversal_learning/: task.py
drl_tasks/habituation_deterministic_reversal_learning/: task.py
habituation_deterministic_reversal_learning/: task.py  task_parameters.yaml
