[project]
name = "deterministic-reversal-learning"
version = "0.1.0"
description = ""
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points."iblrig.plugins"]
task_drl = "drl_tasks.deterministic_reversal_learning.task:Session"
task_hab_drl = "drl_tasks.habituation_deterministic_reversal_learning.task:Session"

[project.scripts]
view_session            = "online_plots:online_plots_cli"

[tool.setuptools.packages]
find = {} 