[project]
name = "deterministic-reversal-learning"
version = "0.1.0"
description = ""
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points."iblrig.plugins"]
task_drl = "drl_tasks._drl_tasks_DeterministicReversalLearning.task:Session"
task_hab_drl = "drl_tasks._drl_tasks_HabituationDeterministicReversalLearning.task:Session"
task_train_drl = "drl_tasks._drl_tasks_TrainingDeterministicReversalLearning.task:Session"

[project.scripts]
view_session            = "drl_tasks.online_plots:online_plots_cli"

[tool.setuptools.packages]
find = {} 